--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Focus",
     "description": "Help you focus the code.Highlight the lines/code block/indent you are editing.",
     "version": "0.1.0",
-    "publisher": "Quan Li",
+    "publisher": "leezw",
     "author": {
         "email": "lee@leezw.net",
         "name": "Quan Li",
